--- a/pages/flow/checkout.wxml
+++ b/pages/flow/checkout.wxml
@@ -102,7 +102,7 @@
         <text class="col-m">￥{{order_total_price}}</text>
       </view>
     </view>
-    <view class="dis-flex flow-all-list">
+    <!-- <view class="dis-flex flow-all-list">
       <text class="flex-five">优惠券：</text>
       <view class="flex-five t-r">
         <view class="" catchtap="togglePopupCoupon">
@@ -114,7 +114,7 @@
           <text wx:else class="">无优惠券可用</text>
         </view>
       </view>
-    </view>
+    </view> -->
     <!-- 配送费用 -->
     <view wx:if="{{ currentDelivery == deliverys.EXPRESS.value }}" class="dis-flex flow-all-list">
       <text class="flex-five">配送费用：</text>
