--- a/pages/goods/index.wxml
+++ b/pages/goods/index.wxml
@@ -30,12 +30,17 @@
           </view>
         </view>
         <view class="right goods__share">
-          <text class="price col-m">兑换积分：{{detail.exchange_points}}</text>
+          <form bindsubmit="openActionsheet" report-submit="true">
+            <button formType="submit" class="share-btn dis-flex flex-dir-column">
+              <text class="share__icon iconfont icon-fenxiang"></text>
+              <text class="f-24">分享</text>
+            </button>
+          </form>
         </view>
       </view>
-      <!-- <view class="goods-sales-box f-28 dis-flex col-8">
+      <view class="goods-sales-box f-28 dis-flex col-8">
         <text class="flex-box num">销量：{{detail.goods_sales}}</text>
-      </view> -->
+      </view>
     </view>
     <!-- 选择商品规格 -->
     <form wx:if="{{ specData }}" bindsubmit="onToggleTrade" report-submit>
@@ -67,8 +72,8 @@
             </view>
             <view class="right flex-box">
               <view class="money-box">
-                <text class="col-m f-26"></text>
-                <text class="price col-m">所需积分：{{detail.exchange_points}}</text>
+                <text class="col-m f-26">￥</text>
+                <text class="price col-m">{{goods_price}}</text>
                 <text class="del" wx:if="{{line_price>0}}">￥{{line_price}}</text>
               </view>
               <view class="goods-stock dis-flex">
@@ -106,7 +111,7 @@
         <view class="footer-fixed f-30">
           <block wx:if="{{stock_num > 0}}">
             <!-- <view class="order-number" bindtap="submit" data-type="addCart">加入购物车</view> -->
-            <view class="point-order-bt" bindtap="submit" data-type="exchangeNow"> 立即兑换</view>
+            <view class="all-order-bt" bindtap="submit" data-type="buyNow"> 立即购买</view>
           </block>
           <view class="default-btn" wx:else>暂无现货</view>
         </view>
@@ -183,9 +188,9 @@
         <view class="flow_num" wx:if="{{cart_total_num > 0}}">
           <text class="">{{cart_total_num}}</text>
         </view>
-      </view>
-      <view class="order-number" catchtap="onToggleTrade">加入购物车</view> -->
-      <view class="point-order-bt" catchtap="onToggleTrade">立即兑换</view>
+      </view> -->
+      <!-- <view class="order-number" catchtap="onToggleTrade">加入购物车</view> -->
+      <view class="all-order-bt" catchtap="onToggleTrade">立即购买</view>
     </view>
   </view>
 </scroll-view>
