--- a/pages/pointGoods/index.wxml
+++ b/pages/pointGoods/index.wxml
@@ -30,17 +30,18 @@
           </view>
         </view>
         <view class="right goods__share">
-          <form bindsubmit="openActionsheet" report-submit="true">
+          <!-- <form bindsubmit="openActionsheet" report-submit="true">
             <button formType="submit" class="share-btn dis-flex flex-dir-column">
               <text class="share__icon iconfont icon-fenxiang"></text>
               <text class="f-24">分享</text>
             </button>
-          </form>
+          </form> -->
+          <text class="price col-m" >兑换积分:{{detail.exchange_points}}</text>
         </view>
       </view>
-      <view class="goods-sales-box f-28 dis-flex col-8">
+      <!-- <view class="goods-sales-box f-28 dis-flex col-8">
         <text class="flex-box num">销量：{{detail.goods_sales}}</text>
-      </view>
+      </view> -->
     </view>
     <!-- 选择商品规格 -->
     <form wx:if="{{ specData }}" bindsubmit="onToggleTrade" report-submit>
@@ -72,8 +73,8 @@
             </view>
             <view class="right flex-box">
               <view class="money-box">
-                <text class="col-m f-26">￥</text>
-                <text class="price col-m">{{goods_price}}</text>
+                <!-- <text class="col-m f-26">￥</text> -->
+                <text class="price col-m">单个兑换积分:{{detail.exchange_points}}</text>
                 <text class="del" wx:if="{{line_price>0}}">￥{{line_price}}</text>
               </view>
               <view class="goods-stock dis-flex">
@@ -110,8 +111,8 @@
         <!-- 底部操作栏 -->
         <view class="footer-fixed f-30">
           <block wx:if="{{stock_num > 0}}">
-            <view class="order-number" bindtap="submit" data-type="addCart">加入购物车</view>
-            <view class="order-bt" bindtap="submit" data-type="buyNow"> 立即购买</view>
+            <!-- <view class="order-number" bindtap="submit" data-type="addCart">加入购物车</view> -->
+            <view class="all-order-bt" bindtap="submit" data-type="exchangeNow"> 立即兑换</view>
           </block>
           <view class="default-btn" wx:else>暂无现货</view>
         </view>
@@ -178,19 +179,19 @@
     <!-- 底部操作栏 -->
     <view class="footer-fixed f-30">
       <!-- 在线客服 -->
-      <view class="goods-fixed-icon dis-flex flex-x-center flex-y-center">
+      <!-- <view class="goods-fixed-icon dis-flex flex-x-center flex-y-center">
         <button open-type="contact" sessionFrom="weapp" size="27" style="opacity: 0;position:absolute;top:0px;left:0px;display:block;width:100%;height:100%;" type="default-light"></button>
         <text class="iconfont icon-kefu "></text>
-      </view>
+      </view> -->
       <!-- 购物车按钮 -->
-      <view bindtap="flowCart" class="goods-fixed-icon">
+      <!-- <view bindtap="flowCart" class="goods-fixed-icon">
         <image class="flow-img" src="../../images/flow.png"></image>
         <view class="flow_num" wx:if="{{cart_total_num > 0}}">
           <text class="">{{cart_total_num}}</text>
         </view>
-      </view>
-      <view class="order-number" catchtap="onToggleTrade">加入购物车</view>
-      <view class="order-bt" catchtap="onToggleTrade">立即购买</view>
+      </view> -->
+      <!-- <view class="order-number" catchtap="onToggleTrade">加入购物车</view> -->
+      <view class="all-order-bt" catchtap="onToggleTrade">立即兑换</view>
     </view>
   </view>
 </scroll-view>
