购买流程修改

--- a/pages/category/list.wxml
+++ b/pages/category/list.wxml
@@ -50,8 +50,7 @@
                   <text class="del f-22" wx:if="{{item.sku[0].line_price>0}}">{{item.sku[0].line_price}}</text>
                 </view>
                 <view class="price f-32 col-m m-top10">
-                  兑换积分: {{item.exchange_points}}
-                  <text class="del f-22" wx:if="{{item.sku[0].line_price>0}}">{{item.sku[0].line_price}}</text>
+                  获取积分: {{item.exchange_points}}
                 </view>
               </view>
             </view>
