--- a/pages/dianpulist/dianpulist.wxss
+++ b/pages/dianpulist/dianpulist.wxss
@@ -1,3 +1,41 @@
+/* 顶部选项卡 */
+
+.header {
+  display: flex;
+  position: fixed;
+  top: 316rpx;
+  width: 100%;
+  height: 88rpx;
+  color: #333;
+  font-size: 28rpx;
+  background: #fff;
+  border-bottom: 1rpx solid #e4e4e4;
+  z-index: 100;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.header .cs {
+  display: inline-block;
+  padding: 0 15rpx;
+  text-align: center;
+  min-width: 20%;
+  height: 87rpx;
+  line-height: 88rpx;
+  box-sizing: border-box;
+}
+
+.header .cs text {
+  display: block;
+  height: 100%;
+}
+
+.header .cs.active text {
+  color: #fd4a5f;
+  border-bottom: 2rpx solid #fd4a5f;
+}
+
+
 page {
   background: #fff;
 }
