--- a/pages/dianpulist/dianpulist.wxml
+++ b/pages/dianpulist/dianpulist.wxml
@@ -19,32 +19,33 @@
     </view>
   </scroll-view>
 </view>
-
-<view class="container b-f">
-  <view class="shop-list">
-    <view wx:for="{{ shopList }}" wx:key="this" catchtap="onSelectedShop" data-id="{{ item.shop_id }}" class="shop-item dis-flex flex-y-center">
-      <view class="shop-item__content flex-box">
-        <view class="shop-item__title">
-          <text>{{ item.shop_name }}</text>
+<!-- 店铺 -->
+<view class="diy-shop" style="margin-top:100rpx;">
+  <view class="shop-item" wx:for="{{ shopList }}" wx:for-item="dataItem" wx:key="this">
+    <form bindsubmit="_onTargetDetail" report-submit="true">
+      <button formType="submit" class="btn-normal dis-flex flex-y-center" data-id="{{ dataItem.shop_id }}">
+        <view class="shop-item__logo">
+          <image src="{{ dataItem.logo.file_path }}"></image>
         </view>
-        <view class="shop-item__address">
-          <text>地址：{{ item.region.province }}{{ item.region.city }}{{ item.region.region }}{{ item.address }}</text>
+        <view class="shop-item__content flex-box">
+          <view class="shop-item__title">
+            <span>{{ dataItem.shop_name }}</span>
+          </view>
+          <view class="shop-item__address onelist-hidden">
+            <span>门店地址：{{ dataItem.region.province }}{{ dataItem.region.city }}{{ dataItem.region.region }}{{ dataItem.address }}</span>
+          </view>
+          <view class="shop-item__phone">
+            <span>联系电话：{{ dataItem.phone }}</span>
+          </view>
+          <view class="shop-item__distance">
+            <block wx:if="{{ dataItem.distance }}">
+              <text class="iconfont icon-dingwei"></text>
+              <text class="f-24">{{ dataItem.distance_unit }}</text>
+            </block>
+          </view>
         </view>
-        <view class="shop-item__phone">
-          <text>联系电话：{{ item.phone }}</text>
-        </view>
-        <view class="shop-item__distance">
-          <block wx:if="{{ item.distance }}">
-            <text class="iconfont icon-dingwei"></text>
-            <text class="f-24">{{ item.distance_unit }}</text>
-          </block>
-        </view>
-      </view>
-      <!-- 选中状态 -->
-      <!-- <view wx:if="{{ item.shop_id == selectedId }}" class="shop-item__right">
-        <text class="iconfont icon-iconfontduihaocopy"></text>
-      </view> -->
-    </view>
+      </button>
+    </form>
   </view>
   <!-- 无数据提供的页面 -->
   <view wx:if="{{ !shopList.length }}">
