--- a/pages/shop/detail/index.wxss
+++ b/pages/shop/detail/index.wxss
@@ -47,3 +47,255 @@ page, .container {
 .content-item__text {
   padding: 0 20rpx;
 }
+
+
+/* common.wxss */
+@import "/utils/common.wxss";
+
+/* 商品组 */
+
+.diy-sharingGoods {
+  padding: 20rpx;
+}
+
+.goods-item {
+  height: 320rpx;
+  margin-bottom: 20rpx;
+  padding: 20rpx;
+  box-sizing: border-box;
+  background: #fff;
+}
+
+.goods-item:last-child {
+  margin-bottom: 0;
+}
+
+/* 商品图片 */
+
+.goods-item_left {
+  display: flex;
+  width: 40%;
+  background: #fff;
+  align-items: center;
+}
+
+.goods-item_left image {
+  display: block;
+  width: 240rpx;
+  height: 240rpx;
+}
+
+.goods-item_right {
+  position: relative;
+  width: 60%;
+}
+
+/* 商品名称 */
+
+.goods-item_right .goods-item_title {
+  height: 72rpx;
+  margin-top: 20rpx;
+  font-size: 28rpx;
+  line-height: 1.3;
+  color: #333;
+}
+
+.goods-item_desc {
+  margin-top: 16rpx;
+}
+
+/* 商品卖点 */
+
+.desc-selling_point {
+  width: 400rpx;
+  height: 32rpx;
+  font-size: 24rpx;
+  line-height: 1.4;
+  color: #ff495e;
+}
+
+/* 拼团信息 */
+
+.desc-situation {
+  margin-top: 12rpx;
+  font-size: 24rpx;
+  line-height: 1.3;
+  color: rgb(240, 60, 60);
+}
+
+.desc-situation .people {
+  margin: 0 12rpx;
+}
+
+/* 商品价格 */
+
+.desc_footer {
+  margin-top: 12rpx;
+  font-size: 24rpx;
+}
+
+.desc_footer .price_x {
+  margin-right: 20rpx;
+  color: rgb(240, 60, 60);
+  font-size: 28rpx;
+}
+
+.desc_footer .price_y {
+  text-decoration: line-through;
+}
+
+/* 去拼团按钮 */
+
+.goods-item .btn-settlement {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 0 28rpx;
+  border-radius: 40rpx;
+  background: linear-gradient(to right, rgb(235, 53, 107) 0%, rgb(240, 60, 60) 100%);
+  box-shadow: 0 4rpx 20rpx -4rpx rgb(235, 53, 107);
+  font-size: 28rpx;
+  line-height: 54rpx;
+  text-align: center;
+  color: #fff;
+}
+
+
+
+
+.store_nav_cont {
+  padding: 20rpx 0;
+}
+
+.store_nav_cont #list-true {
+  color: #ff495e;
+  font-size: 28rpx;
+}
+
+.store_nav_cont #list-0 {
+  color: #333;
+  font-size: 28rpx;
+}
+
+.store_nav_cont .price__arrow {
+  padding-left: 20rpx;
+  font-size: 18rpx;
+  color: #777;
+}
+
+.store_nav_cont #list-true .price__arrow text.active {
+  color: #ff495e;
+}
+
+.container {
+  position: relative;
+}
+
+.index-cont-search icon {
+  left: 0;
+  margin-left: 20rpx;
+}
+
+.index-search-box {
+  background: #fff;
+  padding: 18rpx 13rpx;
+  border-bottom: 1rpx solid #eee;
+}
+
+.index-search {
+  border-bottom: 0;
+  background: #fff;
+  border-radius: 50rpx;
+  overflow: hidden;
+  position: relative;
+  font-size: 32rpx;
+  color: #999;
+  box-sizing: border-box;
+  height: 64rpx;
+  line-height: 64rpx;
+  margin: 0 10rpx;
+}
+
+.list-right {
+  width: 60rpx;
+}
+
+.list-right text {
+  height: 60rpx;
+  line-height: 60rpx;
+  font-size: 40rpx;
+}
+
+.list-header {
+  position: fixed;
+  top: 1rpx;
+  left: 0;
+  right: 0;
+}
+
+.no-more {
+  text-align: center;
+  color: #737373;
+  padding: 20rpx 0;
+}
+
+.category-list {
+  overflow: hidden;
+}
+
+.category-list .list {
+  box-sizing: border-box;
+  width: 50%;
+  float: left;
+}
+
+.category-list .list:nth-child(2n) {
+  border-left: 4rpx solid #f7f7f7;
+  border-bottom: 8rpx solid #f7f7f7;
+}
+
+.category-list .list:nth-child(2n-1) {
+  border-right: 4rpx solid #f7f7f7;
+  border-bottom: 8rpx solid #f7f7f7;
+}
+
+.category-list .list .left, .category-list .right {
+  width: 100%;
+}
+
+.category-list .list .left .img image {
+  width: 100%;
+  height: 375rpx;
+  display: block;
+}
+
+.category-list .right .cont {
+  padding: 0 12rpx;
+}
+
+.category-list .right .cont .title {
+  height: 76rpx;
+  line-height: 1.3;
+}
+
+.category-list.arrange .list {
+  overflow: hidden;
+  padding: 15rpx;
+  border-bottom: 1rpx solid #f7f7f7;
+  width: 100%;
+}
+
+.category-list.arrange .list .left {
+  width: 35%;
+  float: left;
+}
+
+.category-list.arrange .list .right {
+  width: 65%;
+  float: left;
+}
+
+.category-list.arrange .list .left .img image {
+  width: 220rpx;
+  height: 220rpx;
+}
