线下店铺支付

--- a/pages/outlinePay/index.wxml
+++ b/pages/outlinePay/index.wxml
@@ -5,7 +5,7 @@
     </view>
     <view class="pay-name">
       <view>
-        天津零食小铺
+        {{ detail.shop_name }}
       </view>
     </view>
     <view class="pay-img">
