--- a/pages/dealer/qrcode/qrcode.wxss
+++ b/pages/dealer/qrcode/qrcode.wxss
@@ -1,8 +1,53 @@
 page {
-  background: #fff;
+  background: #f7f7f7;
+  height: 100%;
 }
 
-.qrcode image {
+/* .qrcode image {
   display: block;
   width: 100%;
+
+} */
+.erweima{
+  /* text-align: center; */
+  margin-top: 50rpx;
+  width: 600rpx;
+  height: 600rpx;
+}
+.qrcode-box{
+  background-color: #fff;
+  height: 900rpx;
+  position: fixed;
+  left: 20rpx;
+  right: 20rpx;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 20rpx;
+  padding: 30rpx;
+}
+.qrcode-mingcheng{
+  display: flex;
+}
+.touxiang{
+  width: 150rpx;
+  height: 150rpx;
+  z-index: 10;
+  border: 4rpx solid #fff;
+  border-radius: 50%;
+  overflow: hidden;
+
+
+}
+.name{
+  padding-top: 37rpx;
+  margin-bottom: 10rpx;
+
+}
+.touxiang image{
+  width: 100%;
+  height: 100%;
+}
+.txt{
+  text-align: center;
+  margin-top: 30rpx;
 }
