--- a/pages/user/pointDetail/index.wxml
+++ b/pages/user/pointDetail/index.wxml
@@ -1,20 +1,15 @@
 <view class="container b-f">
   <!-- 顶部选项卡 -->
-  <view class="swiper-tab dis-flex box-align-center flex-y-center">
-    <block wx:for="{{ tabList }}" wx:key="this">
-      <view class="swiper-tab-item {{ dataType == item.value ? 'on' : ''}}" data-current="{{ item.value }}" bindtap="swichNav">{{ item.text }}</view>
-    </block>
-  </view>
-  <!-- 提现明细列表 -->
+  <!-- 用户积分明细列表 -->
   <scroll-view scroll-y="{{ true }}" bindscrolltolower="triggerDownLoad" style="height: {{swiperHeight}}px;">
     <view class="widget-list" wx:if="{{ list.data.length }}">
       <view class="widget__detail dis-flex flex-x-between" wx:for="{{ list.data }}" wx:key="this">
         <view class="detail__left dis-flex flex-dir-column flex-x-around">
-          <view class="detail__money f-30">提现 {{ item.money }}元</view>
+          <view class="detail__money f-30">{{ item.remark }}</view>
           <view class="detail__time col-9 f-24">{{ item.create_time }}</view>
         </view>
         <view class="detail__right dis-flex flex-dir-column flex-x-center flex-y-center">
-          <view class="detail__status f-28 {{ item.apply_status == 20 || item.apply_status == 40 ? 'col-green' : 'col-m' }}">{{ applyStatus[item.apply_status] }}</view>
+          <view class="detail__status f-28 {{ item.type == 20  ? 'col-green' : 'col-m' }}">积分：{{ item.points}}</view>
           <block wx:if="{{ item.apply_status == 30 }}">
             <view class="detail__reason f-24" catchtap="triggerReasonMsg" data-reason="{{ item.reject_reason }}">查看原因</view>
           </block>
@@ -26,7 +21,7 @@
     <!-- 没有记录 -->
     <view class="yoshop-notcont" wx:if="{{ !list.data.length && !isLoading }}">
       <text class="iconfont icon-wushuju"></text>
-      <text class="cont">亲，暂无提现记录哦</text>
+      <text class="cont">亲，暂无积分记录哦</text>
     </view>
   </scroll-view>
 </view>
