--- a/pages/miaosha/miaosha.wxml
+++ b/pages/miaosha/miaosha.wxml
@@ -16,13 +16,22 @@
     </view>
 
     <!-- 筛选标签 -->
-    <view class="store_nav_cont dis-flex b-f b-b">
+    <!-- 顶部选项卡 -->
+    <view class="header f-28 col-3">
+      <view catchtap="bindHeaderTap" class="{{dataType==='no-exchange'?'active':''}}" data-type="no-exchange">
+        <text>未开始</text>
+      </view>
+      <view bindtap="bindHeaderTap" class="{{dataType==='exchange'?'active':''}}" data-type="exchange">
+        <text>已开始</text>
+      </view>
+    </view>
+    <!-- <view class="store_nav_cont dis-flex b-f b-b">
       <view bindtap="switchSortType" data-type="all" class="flex-box t-c p-r" data-index="0 " id="list-{{sortType==='all'?true:0}}">
         <text>综合</text>
       </view>
-      <!-- <view bindtap="switchSortType" data-type="sales" class="flex-box t-c p-r" data-index="1" id="list-{{sortType==='sales'?true:0}}">
+      <view bindtap="switchSortType" data-type="sales" class="flex-box t-c p-r" data-index="1" id="list-{{sortType==='sales'?true:0}}">
         <text> 销量</text>
-      </view> -->
+      </view>
       <view bindtap="switchSortType" data-type="price" class="dis-flex flex-x-center flex-box t-c p-r" data-index="2" id="list-{{sortType==='price'?true:0}}">
         <text class="price__text">价格</text>
         <view class="price__arrow dis-flex flex-dir-column flex-x-center flex-y-center">
@@ -30,18 +39,21 @@
           <text class="iconfont icon-arrow-bottom {{sortPrice?'active':''}}"></text>
         </view>
       </view>
-    </view>
+    </view> -->
 
     <!-- 商品列表 -->
-    <scroll-view bindscrolltolower="bindDownLoad" scroll-y style="height: {{scrollHeight}}px; width: 750rpx;" wx:if="{{list.data.length > 0}}">
+    <scroll-view bindscrolltolower="bindDownLoad" scroll-y style="height: {{scrollHeight}}px; width: 750rpx; margin-top: 88rpx;" wx:if="{{list.data.length > 0}}">
       <view class="new">
         <view class="category-list {{ arrange }}">
           <navigator class="list b-f" hover-class="none" url="../goods/index?goods_id={{item.goods_id}}" wx:for="{{list.data}}" wx:key="list">
             <view class="left">
               <view class="img">
                 <image class="goodsImg" mode="scaleToFill" src="{{item.image[0].file_path}}"></image>
-                <text class="daojishi f-30" style="color: #ff495e !important; ">
-                <text style="color: #fff;">距开始：</text>{{countdown}}
+                <text class="daojishi f-30" style="color: #ff495e !important; " wx:if="{{showView1}}">
+                  <text style="color: #fff;">距开始：</text>{{countdown}}
+                </text>
+                <text class="daojishi f-26" style="color: #ff495e !important; "  wx:if="{{!showView1}}">
+                  <text style="color: #fff;">距结束：</text>{{countdown}}
                 </text>
                 <!-- <text class="daojishi f-30" style="color: #ff495e !important; ">
                 <text style="color: #fff;">距结束：</text>{{countdown}}
