--- a/components/diy/index.wxml
+++ b/components/diy/index.wxml
@@ -73,6 +73,10 @@
   <block wx:if="{{item.type === 'pointGoods'}}">
     <diy-pointGoods itemIndex="{{ itemIndex }}" itemStyle="{{ item.style }}" dataList="{{ item.data }}"></diy-pointGoods>
   </block>
+  <!-- 限时优惠商品组 -->
+  <block wx:if="{{item.type === 'seckillGoods'}}">
+    <diy-seckillGoods itemIndex="{{ itemIndex }}" itemStyle="{{ item.style }}" dataList="{{ item.data }}"></diy-seckillGoods>
+  </block>
 
   <!-- 优惠券组 -->
   <block wx:if="{{item.type === 'coupon'}}">
