--- a/pages/shop/detail/index.wxml
+++ b/pages/shop/detail/index.wxml
@@ -12,10 +12,13 @@
   </view>
   <!-- 顶部选项卡 -->
     <view class="header-1 f-28 col-3">
-      <view catchtap="bindHeaderTap" class="{{dataType==='on-going'?'active':''}}" data-type="on-going">
+      <view catchtap="bindHeaderTap" class="{{dataType==='on-going'?'active':''}}" 
+      data-type="on-going">
         <text>热门商品</text>
       </view>
-      <view bindtap="bindHeaderTap" class="{{dataType==='not-started'?'active':''}}" data-type="not-started">
+      <view bindtap="bindHeaderTap" class="{{dataType==='not-started'?'active':''}}" 
+      
+      data-type="not-started">
         <text>优惠商品</text>
       </view>
     </view>
@@ -56,7 +59,8 @@
   <scroll-view bindscrolltolower="bindDownLoad" scroll-y style="height: {{scrollHeight}}px; width: 700rpx;" wx:if="{{list.data.length > 0}}">
     <view class="new">
       <view class="category-list {{ arrange }}">
-        <navigator class="list b-f" hover-class="none" url="../../goods/index?goods_id={{item.goods_id}}" wx:for="{{list.data}}" wx:key="list">
+        <navigator class="list b-f" hover-class="none" url="../../goods/index?goods_id={{item.goods_id}}" wx:for="{{list.data}}" wx:key="list" wx:if="{{dataType == 'on-going'}}">
+        <!-- <navigator class="list b-f" hover-class="none" url="../../seckill/seckillGoods/index?goods_id={{item.goods_id}}" wx:for="{{list.data}}" wx:key="list" wx:else> -->
           <view class="left">
             <view class="img" >
               <image class="goodsImg" mode="scaleToFill" src="{{item.image[0].file_path}}"></image>
@@ -69,8 +73,35 @@
                 
               </text>
               <text class="daojishi f-26" style="color: #ff495e !important; " wx:if="{{dataType=='not-started'}}">
-                  <text style="color: #000;" >活动时间：</text>{{countdown}}
-                  <text style="color: #000;">~</text>{{countdown}}
+                  <text style="color: #000;" >活动剩余时间：</text>{{item.time}}
+                  <!-- <text style="color: #000;">~</text>{{countdown}} -->
+              </text>
+              <view class="price f-26 col-m m-top10">
+                价格：￥{{item.sku[0].goods_price}}
+                <text class="del f-22" wx:if="{{item.sku[0].line_price>0}}">{{item.sku[0].line_price}}</text>
+              </view>
+              <view class="price f-26 col-m m-top10">
+                获取积分: {{item.exchange_points}}
+              </view>
+            </view>
+          </view>
+        </navigator>
+        <!-- <navigator class="list b-f" hover-class="none" url="../../goods/index?goods_id={{item.goods_id}}" wx:for="{{list.data}}" wx:key="list" wx:if="{{dataType == 'on-going'}}"> -->
+        <navigator class="list b-f" hover-class="none" url="../../seckill/seckillGoods/index?goods_id={{item.goods_id}}" wx:for="{{list.data}}" wx:key="list" wx:if="{{dataType == 'not-started'}}">
+          <view class="left">
+            <view class="img" >
+              <image class="goodsImg" mode="scaleToFill" src="{{item.image[0].file_path}}"></image>
+              
+            </view>
+          </view>
+          <view class="right">
+            <view class="cont">
+              <text class="f-30 title twolist-hidden m-top20">{{item.goods_name}}
+                
+              </text>
+              <text class="daojishi f-26" style="color: #ff495e !important; " wx:if="{{dataType=='not-started'}}">
+                  <text style="color: #000;" >活动剩余时间：</text>{{item.time}}
+                  <!-- <text style="color: #000;">~</text>{{countdown}} -->
               </text>
               <view class="price f-26 col-m m-top10">
                 价格：￥{{item.sku[0].goods_price}}
