--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -9,5 +9,6 @@
   <view class="auth-title">申请获取以下权限</view>
   <view class="auth-subtitle">获得你的公开信息（昵称、头像等）</view>
   <button class="login-btn" openType="getUserInfo" lang="zh_CN" bindgetuserinfo="authorLogin">授权登录</button>
+  <button class="login-btn" bindtap="goToIndex" style="margin-top:30rpx;background-color:#f05654;">暂不登录</button>
 </view>
 <!-- </view> -->
