--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -78,7 +78,7 @@
       </view>
     </view>
     <view class="qianbao-right">
-      <navigator  url="./pointDetail/index">
+      <navigator  url="./pointDetail/index" hover-class="none">
         <view>
             <image src="../../images/qianbao.png"></image>
         </view>
